# greed

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Containerfile  Dockerfile  Procfile  README.md  alembic.ini  blockonomics.py  bot.json  bot.py  callback.py  configloader.py  core.py  database.py  dbcomposites.py  duckbot.py  flask_app.py  localization.py  nuconfig.py  pyproject.toml  requirements.txt  strings.py  utils.py  worker.py
.forgejo/workflows/: docker-buildx-new_v_tag.yml  python-uv-compileall-new_python_commit.yml
.github/workflows/: analysis.yml  codeql-analysis.yml  docker-image.yml  quality.yml  release.yml  test.yml
.run/: Run greed.run.xml
alembic/: env.py
config/: config.toml  template_config.ini  template_config.toml
docs/: README.md
greedbot/: __main__.py  database.py  duckbot.py  localization.py  nuconfig.py  utils.py  worker.py
greedbot/strings/: en.py  zh_cn.py
strings/: README.md  br.py  en.py  en_US.py  es_mx.py  fa.py  he.py  heb.py  hi.py  it.py  it_IT.py  pt_br.py  ru.py  ru_RU.py  tr.py  uk.py  uk_UA.py  zh_cn.py
